fix(config): add explicit type annotation to validate number

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -6,7 +6,8 @@
       "recommended": true,
       "style": {
         "useImportType": "off",
-        "noParameterProperties": "off"
+        "noParameterProperties": "off",
+        "noInferrableTypes": "off"
       }
     }
   },
