--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@commitlint/config-conventional": "^20.3.0",
     "@nestjs/cli": "^11.0.14",
     "@nestjs/schematics": "^11.0.9",
+    "@nestjs/swagger": "^11.2.4",
     "@nestjs/testing": "^11.1.11",
+    "@scalar/nestjs-api-reference": "^1.0.13",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
