feat(localization): implement i18n support with nestjs-i18n and add localization module

--- a/.env.example
+++ b/.env.example
@@ -26,4 +26,5 @@ APP_CORS_ORIGINS="http://localhost:3000"
 # Levels in order of severity: trace, debug, info, warn, error, fatal
 # Use 'trace' for maximum detail, 'info' for production, 'error' for minimal logging.
 APP_LOG_LEVEL="trace"
-
+# The default language to use as a fallback if a translation is not available in the requested language.
+APP_FALLBACK_LANGUAGE="en"
