--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "helmet": "^8.1.0",
+    "nestjs-i18n": "^10.6.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
