chore(env): add database configuration settings to .env.example

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,14 @@ APP_CORS_ORIGINS="http://localhost:3000"
 APP_LOG_LEVEL="trace"
 # The default language to use as a fallback if a translation is not available in the requested language.
 APP_FALLBACK_LANGUAGE="en"
+
+########################################
+# Database Configuration
+########################################
+DB_HOST="localhost"
+DB_PORT=5432
+DB_NAME="nestjs-boilerplate"
+DB_USER="postgres"
+DB_PASSWORD="super-secret"
+DB_SSL=false
+DB_SSL_REJECT_UNAUTHORIZED=true
