chore: add missing variable to .env.example file

--- a/.env.example
+++ b/.env.example
@@ -37,5 +37,10 @@ DB_PORT=5432
 DB_NAME="nestjs-boilerplate"
 DB_USER="postgres"
 DB_PASSWORD="super-secret"
-DB_SSL=false
+DB_ENABLE_SSL=false
+# Set to 'true' in production with valid certificates, 'false' for self-signed certificates.
+# Note: Only applies when DB_ENABLE_SSL is 'true'.
 DB_SSL_REJECT_UNAUTHORIZED=true
+DB_CA=
+DB_KEY=
+DB_CERT=
