feat(redis): add redis config with validation and env variables

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,23 @@ DB_SSL_REJECT_UNAUTHORIZED=true
 DB_CA=
 DB_KEY=
 DB_CERT=
+
+########################################
+# Redis (Cache, Rate Limiting, etc.)
+########################################
+# Optional connection string (overrides individual settings if provided)
+REDIS_URL=
+# Individual database settings (used if DB_URL is not set)
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=secret-pass            # Leave empty if authentication is not required
+REDIS_CONNECT_TIMEOUT=10000           # Connection timeout (milliseconds)
+# TLS configuration (usually required for managed Redis services)
+REDIS_ENABLE_TLS=false
+REDIS_REJECT_UNAUTHORIZED=false
+# TLS certificate paths (only needed if REDIS_ENABLE_TLS is enabled)
+REDIS_CA=
+REDIS_KEY=
+REDIS_CERT=
+# Redis Insight (local monitoring tool)
+REDIS_INSIGHT_PORT=5540
