feat(cache): implement cache support with Redis integration and configuration

--- a/.env.example
+++ b/.env.example
@@ -49,11 +49,12 @@ DB_CERT=
 # Redis (Cache, Rate Limiting, etc.)
 ########################################
 # Optional connection string (overrides individual settings if provided)
-REDIS_URL=
+# Format: redis://default:PASSWORD@HOST:PORT
+REDIS_URL=redis://default:pass@localhost:6379
 # Individual database settings (used if DB_URL is not set)
 REDIS_HOST=redis
 REDIS_PORT=6379
-REDIS_PASSWORD=secret-pass            # Leave empty if authentication is not required
+REDIS_PASSWORD=pass            # Leave empty if authentication is not required
 REDIS_CONNECT_TIMEOUT=10000           # Connection timeout (milliseconds)
 # TLS configuration (usually required for managed Redis services)
 REDIS_ENABLE_TLS=false
@@ -64,3 +65,12 @@ REDIS_KEY=
 REDIS_CERT=
 # Redis Insight (local monitoring tool)
 REDIS_INSIGHT_PORT=5540
+
+
+########################################
+# Cache
+########################################
+CACHE_TTL=1h
+# Maximum number of items to store in the in-memory LRU cache.
+CACHE_LRU_SIZE=5000
+
