--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@keyv/redis": "^5.1.5",
+    "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^11.1.11",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.11",
     "@nestjs/platform-express": "^11.1.11",
     "@nestjs/typeorm": "^11.0.0",
     "@tygra/nestjs-graceful-shutdown": "^2.0.0",
+    "cacheable": "^2.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "helmet": "^8.1.0",
