refactor(config): update cache and Redis configuration for seconds-based TTL and connection timeout

--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ REDIS_URL=redis://default:pass@localhost:6379
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=pass            # Leave empty if authentication is not required
-REDIS_CONNECT_TIMEOUT=10000           # Connection timeout (milliseconds)
+REDIS_CONNECT_TIMEOUT=10       # Connection timeout (seconds)
 # TLS configuration (usually required for managed Redis services)
 REDIS_ENABLE_TLS=false
 REDIS_REJECT_UNAUTHORIZED=false
@@ -70,7 +70,8 @@ REDIS_INSIGHT_PORT=5540
 ########################################
 # Cache
 ########################################
-CACHE_TTL=1h
+# How long cached data should live (min 1, max 604800 = 7 days).
+CACHE_TTL=10 # In seconds
 # Maximum number of items to store in the in-memory LRU cache.
 CACHE_LRU_SIZE=5000
 
