feat(config): add prefix property to app.config and update cache key construction

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 # Application Configuration
 ########################################
 NODE_ENV="development" # Must be one of: development, staging, production, test
-# Project name
 APP_NAME="NestJS Boilerplate"
+APP_PREFIX="nestjs-boilerplate"            # optional, defaults to kebab-case of APP_NAME
 # The network port number on which the application will listen for incoming HTTP requests.
 # Must be a valid port number (1-65535). Ports below 1024 typically require elevated privileges.
 APP_PORT=3000
