feat(ratelimiter): add ratelimiter config validation

--- a/.env.example
+++ b/.env.example
@@ -75,3 +75,15 @@ CACHE_TTL=10 # In seconds
 # Maximum number of items to store in the in-memory LRU cache.
 CACHE_LRU_SIZE=5000
 
+
+########################################
+# Rate Limiting
+########################################
+RATE_LIMIT_ENABLED=true
+# Time window for rate limiting (seconds)
+RATE_LIMIT_TTL=10
+# Maximum requests allowed per window
+RATE_LIMIT_MAX=3
+# Block duration after exceeding the limit (seconds)
+RATE_LIMIT_BLOCK_DURATION=0
+
