--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "helmet": "^8.1.0",
+    "nestjs-cls": "^6.2.0",
     "nestjs-i18n": "^10.6.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
