--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 NODE_ENV="development" # Must be one of: development, staging, production, test
 APP_NAME="NestJS Boilerplate"
 APP_PREFIX="nestjs-boilerplate"            # optional, defaults to kebab-case of APP_NAME
+APP_VERSION="0.0.1"                        # optional
 # The network port number on which the application will listen for incoming HTTP requests.
 # Must be a valid port number (1-65535). Ports below 1024 typically require elevated privileges.
 APP_PORT=3000
@@ -86,4 +87,15 @@ RATE_LIMIT_TTL=10
 RATE_LIMIT_MAX=3
 # Block duration after exceeding the limit (seconds)
 RATE_LIMIT_BLOCK_DURATION=0
+
+
+########################################
+# Observability
+########################################
+# Prometheus
+DOCKER_PROMETHEUS_PORT=9090
+# Grafana
+DOCKER_GRAFANA_PORT=3001
+DOCKER_GRAFANA_USERNAME=grafana
+DOCKER_GRAFANA_PASSWORD=grafana
 
