--- a/package.json
+++ b/package.json
@@ -33,6 +33,16 @@
     "@nestjs/platform-express": "^11.1.11",
     "@nestjs/throttler": "^6.5.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.3",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.209.0",
+    "@opentelemetry/exporter-prometheus": "^0.209.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.209.0",
+    "@opentelemetry/resources": "^2.3.0",
+    "@opentelemetry/sdk-metrics": "^2.3.0",
+    "@opentelemetry/sdk-node": "^0.209.0",
+    "@opentelemetry/sdk-trace-base": "^2.3.0",
+    "@opentelemetry/semantic-conventions": "^1.38.0",
     "@tygra/nestjs-graceful-shutdown": "^2.0.0",
     "cacheable": "^2.3.1",
     "class-transformer": "^0.5.1",
