feat(logging): implement auto request logging with pino logger

--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,20 @@
 ########################################
-# Application Configuration
+# Application
 ########################################
-NODE_ENV="development" # Must be one of: development, staging, production, test
+NODE_ENV=development # development | staging | production | test
 APP_NAME="NestJS Boilerplate"
-APP_PREFIX="nestjs-boilerplate"            # optional, defaults to kebab-case of APP_NAME
-APP_VERSION="0.0.1"                        # optional
-# The network port number on which the application will listen for incoming HTTP requests.
-# Must be a valid port number (1-65535). Ports below 1024 typically require elevated privileges.
 APP_PORT=3000
-# The base URL prefix prepended to all API routes.
-# Example: "/api" results in routes like /api/health, /api/users
-APP_ROUTE_PREFIX="/api"
-# This is important when the app is behind a reverse proxy (e.g., Nginx, Traefik, ALB).
-# Options:
-# - true/false: trust all proxies (unsafe if not properly configured) or none (default).
-# - string: single IP, CIDR, or special values ('loopback', 'linklocal', 'uniquelocal').
-# - comma-separated list: multiple IPs/CIDRs/special values.
-# - number: trust the nth hop from the front-facing proxy server.
-# Default: false
-APP_TRUST_PROXY="loopback"
-# Specifies which external domains are permitted to make requests to this API.
-# Example: "http://localhost:3000,https://app.example.com" or "*" to allow all origins (not recommended for production).
-APP_CORS_ORIGINS="http://localhost:3000"
-# The minimum severity level of log messages to record.
-# Messages below this level will be ignored.
-# Levels in order of severity: trace, debug, info, warn, error, fatal
-# Use 'trace' for maximum detail, 'info' for production, 'error' for minimal logging.
-APP_LOG_LEVEL="trace"
-# The default language to use as a fallback if a translation is not available in the requested language.
-APP_FALLBACK_LANGUAGE="en"
+APP_VERSION="0.0.1" # optional
+APP_ROUTE_PREFIX=/api
+# Trust proxy settings (required behind reverse proxies / load balancers)
+# Examples: true | false | 127.0.0.1 | loopback | linklocal | uniquelocal
+APP_TRUST_PROXY=loopback
+APP_CORS_ORIGINS=http://localhost:3000 # Comma-separated list of allowed CORS origins
+APP_LOG_LEVEL=debug					# Logging level: trace | debug | info | warn | error | fatal
+APP_LOG_SERVICE=opentelemetry  # log services: console | opentelemetry
+APP_FALLBACK_LANGUAGE=en
+APP_DEBUG=true
+
 
 ########################################
 # Database Configuration
