--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "helmet": "^8.1.0",
     "nestjs-cls": "^6.2.0",
     "nestjs-i18n": "^10.6.0",
+    "nestjs-pino": "^4.5.0",
     "pg": "^8.16.3",
+    "pino-http": "^11.0.0",
+    "pino-opentelemetry-transport": "^2.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
@@ -71,6 +74,7 @@
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "lint-staged": "^16.2.7",
+    "pino-pretty": "^13.1.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.6",
