refactor(observability): update otel stack config

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 ########################################
 NODE_ENV=development # development | staging | production | test
 APP_NAME="NestJS Boilerplate"
+APP_PREFIX="nestjs-boilerplate"
 APP_PORT=3000
 APP_VERSION="0.0.1" # optional
 APP_ROUTE_PREFIX=/api
@@ -78,6 +79,7 @@ RATE_LIMIT_BLOCK_DURATION=0
 ########################################
 # Observability
 ########################################
+OTEL_SERVICE_NAME=nestjs-boilerplate
 # Prometheus
 DOCKER_PROMETHEUS_PORT=9090
 # Grafana
