--- a/docker/observability/prometheus/config.yaml
+++ b/docker/observability/prometheus/config.yaml
@@ -8,6 +8,33 @@ scrape_configs:
   - job_name: "tempo"
     static_configs:
       - targets: ["tempo:3200"]
-  - job_name: "opentelemetry"
+  - job_name: "otel-collector"
     static_configs:
-      - targets: ["otel-collector:8888"]
+      - targets: ["localhost:8888"]
+  # - job_name: "telemetry"
+  #   static_configs:
+  #     - targets: ["localhost:8889"]
+
+
+otlp:
+  # Recommended attributes to be promoted to labels.
+  promote_resource_attributes:
+    - service.instance.id
+    - service.name
+    - service.namespace
+    - service.version
+    - cloud.availability_zone
+    - cloud.region
+    - container.name
+    - deployment.environment
+    - deployment.environment.name
+    - k8s.cluster.name
+    - k8s.container.name
+    - k8s.cronjob.name
+    - k8s.daemonset.name
+    - k8s.deployment.name
+    - k8s.job.name
+    - k8s.namespace.name
+    - k8s.pod.name
+    - k8s.replicaset.name
+    - k8s.statefulset.name
