feat(email): add email configurations

--- a/.env.example
+++ b/.env.example
@@ -87,3 +87,15 @@ DOCKER_GRAFANA_PORT=3001
 DOCKER_GRAFANA_USERNAME=grafana
 DOCKER_GRAFANA_PASSWORD=grafana
 
+
+########################################
+# Email
+########################################
+EMAIL_PROVIDER=smtp
+EMAIL_FROM_ADDRESS=example@email.com
+EMAIL_FROM_NAME=example
+SMTP_HOST=
+SMTP_PORT=
+SMTP_SECURE=
+SMTP_USER=
+SMTP_PASS=
