--- a/.env.example
+++ b/.env.example
@@ -12,45 +12,30 @@ APP_ROUTE_PREFIX=/api
 APP_TRUST_PROXY=loopback
 APP_CORS_ORIGINS=http://localhost:3000 # Comma-separated list of allowed CORS origins
 APP_LOG_LEVEL=debug					# Logging level: trace | debug | info | warn | error | fatal
-APP_LOG_SERVICE=opentelemetry  # log services: console | opentelemetry
+APP_LOG_SERVICE=console  # log services: console | opentelemetry
 APP_FALLBACK_LANGUAGE=en
 APP_DEBUG=true
 
 
 ########################################
-# Database Configuration
+# Database
 ########################################
-DB_HOST="localhost"
-DB_PORT=5432
-DB_NAME="nestjs-boilerplate"
-DB_USER="postgres"
-DB_PASSWORD="super-secret"
+# Recommended for production: a single connection string
+# Format: postgres://USER:PASSWORD@HOST:PORT/DATABASE_NAME
+DB_URL=postgres://postgres:secret@127.0.0.1:5432/nestjs-boilerplate
+DB_TYPE=postgres
 DB_ENABLE_SSL=false
-# Set to 'true' in production with valid certificates, 'false' for self-signed certificates.
-# Note: Only applies when DB_ENABLE_SSL is 'true'.
-DB_SSL_REJECT_UNAUTHORIZED=true
-DB_CA=
-DB_KEY=
-DB_CERT=
+DB_CONNECT_TIMEOUT=10
+DB_MAX_CONNECTIONS=10   # Connection pool settings
+DB_SYNC=false
+
 
 ########################################
 # Redis (Cache, Rate Limiting, etc.)
 ########################################
-# Optional connection string (overrides individual settings if provided)
 # Format: redis://default:PASSWORD@HOST:PORT
 REDIS_URL=redis://default:pass@localhost:6379
-# Individual database settings (used if DB_URL is not set)
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_PASSWORD=pass            # Leave empty if authentication is not required
-REDIS_CONNECT_TIMEOUT=10       # Connection timeout (seconds)
-# TLS configuration (usually required for managed Redis services)
-REDIS_ENABLE_TLS=false
-REDIS_REJECT_UNAUTHORIZED=false
-# TLS certificate paths (only needed if REDIS_ENABLE_TLS is enabled)
-REDIS_CA=
-REDIS_KEY=
-REDIS_CERT=
+REDIS_CONNECT_TIMEOUT=10 # Connection timeout (seconds)
 # Redis Insight (local monitoring tool)
 REDIS_INSIGHT_PORT=5540
 
@@ -58,6 +43,7 @@ REDIS_INSIGHT_PORT=5540
 ########################################
 # Cache
 ########################################
+CACHE_DB=0 # Separate db index for caching
 # How long cached data should live (min 1, max 604800 = 7 days).
 CACHE_TTL=10 # In seconds
 # Maximum number of items to store in the in-memory LRU cache.
@@ -67,35 +53,29 @@ CACHE_LRU_SIZE=5000
 ########################################
 # Rate Limiting
 ########################################
+RATE_LIMIT_DB=1 # Separate db index for rate limiting
 RATE_LIMIT_ENABLED=true
-# Time window for rate limiting (seconds)
-RATE_LIMIT_TTL=10
-# Maximum requests allowed per window
-RATE_LIMIT_MAX=3
-# Block duration after exceeding the limit (seconds)
-RATE_LIMIT_BLOCK_DURATION=0
+RATE_LIMIT_TTL=10 # Time window for rate limiting (seconds)
+RATE_LIMIT_MAX=3 # Maximum requests allowed per window
+RATE_LIMIT_BLOCK_DURATION=0 # Block duration after exceeding the limit (seconds)
 
 
 ########################################
 # Observability
 ########################################
+OTEL_LOG_LEVEL=debug
 OTEL_SERVICE_NAME=nestjs-boilerplate
-# Prometheus
-DOCKER_PROMETHEUS_PORT=9090
-# Grafana
-DOCKER_GRAFANA_PORT=3001
-DOCKER_GRAFANA_USERNAME=grafana
-DOCKER_GRAFANA_PASSWORD=grafana
+OTEL_RESOURCE_ATTRIBUTES=service.environment=development,service.version=0.0.1
 
 
 ########################################
 # Email
 ########################################
+EMAIL_FROM_ADDRESS=sajid@email.com
+EMAIL_FROM_NAME=sajid
 EMAIL_PROVIDER=smtp
-EMAIL_FROM_ADDRESS=example@email.com
-EMAIL_FROM_NAME=example
-SMTP_HOST=
-SMTP_PORT=
-SMTP_SECURE=
-SMTP_USER=
-SMTP_PASS=
+# smtp
+SMTP_URL=smtp://localhost:1025
+SMTP_CONNECT_TIMEOUT=10 # Connection timeout (seconds)
+# third-party
+SENDGRID_API_KEY=
