build: add mailpit docker service for local development

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,6 +54,16 @@ services:
     networks:
       - nestjs-boilerplate
 
+  mailpit:
+    image: axllent/mailpit
+    restart: always
+    container_name: nestjs-boilerplate-mail
+    ports:
+      - 8025:8025
+      - 1025:1025
+    networks:
+      - nestjs-boilerplate
+
 volumes:
   containers:
   redisinsight-data:
