--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "typecheck": "tsc --noEmit",
     "check": "ultracite check",
     "check:fix": "ultracite fix",
-    "docker:up": "docker compose --env-file .env -f docker-compose.yaml up -d",
-    "docker:down": "docker compose --env-file .env -f docker-compose.yaml down",
+    "docker:up": "docker compose --env-file .env.docker -f docker-compose.yaml up -d",
+    "docker:down": "docker compose --env-file .env.docker -f docker-compose.yaml down",
     "prepare": "husky"
   },
   "dependencies": {
     "@keyv/redis": "^5.1.5",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs-redis/kit": "^0.13.3",
     "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^11.1.11",
@@ -52,6 +53,7 @@
     "nestjs-cls": "^6.2.0",
     "nestjs-i18n": "^10.6.0",
     "nestjs-pino": "^4.5.0",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "pino-http": "^11.0.0",
     "pino-opentelemetry-transport": "^2.0.0",
@@ -67,9 +69,11 @@
     "@nestjs/swagger": "^11.2.4",
     "@nestjs/testing": "^11.1.11",
     "@scalar/nestjs-api-reference": "^1.0.13",
+    "@types/bun": "^1.3.6",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
+    "@types/nodemailer": "^7.0.5",
     "@types/supertest": "^6.0.3",
     "globals": "^17.0.0",
     "husky": "^9.1.7",
